--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile('org.seleniumhq.selenium:selenium-java:3.141.59')
     testCompile('io.github.bonigarcia:webdrivermanager:3.1.1')
     testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
+    testCompile('org.junit.jupiter:junit-jupiter-engine:5.3.2')
 }
 
 test {
